test analyzer - testeo terminado

--- a/src/index.html
+++ b/src/index.html
@@ -16,28 +16,28 @@
       </h1>
     </header>
     <ul>
-      <li class="elemento-caja">
-        Carácteres:
+      <li class="elemento-caja" data-testid="character-count">
+        Caracteres:
         <!-- OK 1Recuento de caracteres:contar el número de caracteres en el texto de entrada, incluidos espacios y signos de puntuación, y mostrar este recuento a la usuaria.-->
       </li>
-      <li class="elemento-caja">
-        Carácteres sin espacios:
+      <li class="elemento-caja" data-testid="character-no-spaces-count">
+        Caracteres sin espacios:
         <!--2Recuento de caracteres excluyendo espacios y signos de puntuación: la aplicación debe poder contar el número de caracteres en el texto de entrada, excluyendo espacios y signos de puntuación, y mostrar este recuento a la usuaria.-->
       </li>
-      <li class="elemento-caja">
+      <li class="elemento-caja" data-testid="word-count">
         Palabras:
         <!-- OK 3Recuento de palabras: la aplicación debe poder contar el número de palabras en el texto de entrada y mostrar este recuento a la usuaria-->
       </li>
-      <li class="elemento-caja">
+      <li class="elemento-caja" data-testid="number-count">
         Números:
         <!-- OK 4Recuento de números: la aplicación debe contar cúantos números hay en el texto de entrada y mostrar este recuento a la usuaria.-->
       </li>
-      <li class="elemento-caja">
+      <li class="elemento-caja" data-testid="number-sum">
         Suma de números:
         <!--OK 5 Suma total de números: la aplicación debe sumar todos los números que hay en el texto de entrada y mostrar el resultado a la usuaria.-->
       </li>
 
-      <li class="elemento-caja">
+      <li class="elemento-caja" data-testid="word-length-average">
         Promedio longitud:
         <!--Longitud media de las palabras: la aplicación debe calcular la longitud media de las palabras en el texto de entrada y mostrársela a la usuaria.-->
       </li>
@@ -49,7 +49,6 @@
       cols="33"
       autocomplete="off"
     ></textarea>
-    <!-- tamaño del input -->
     <div id="posicion-boton">
       <button type="button" id="reset-button">Limpiar</button>
     </div>
