test analyzer - cambio en elemento html

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
       <button type="button" id="reset-button">Limpiar</button>
     </div>
     <footer>
-      <p style="position: relative; left: -62px">Nicole C. Aburto Olave</p>
+      <p>Nicole C. Aburto Olave</p>
     </footer>
   </body>
 </html>
